# driving-assistant-technology

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  stop_sign_detections.csv
data/: README.md  lane-departure-log.csv
data/Object-Detection/: classes.names  object-detection-01.csv  objectg-detection-02.csv
data/lane-departure/evaluation/: evaluate_lanes.py  lane-departure-log.csv
data/lane-departure/evaluation/evaluation-results/: evaluation-results.txt
data/lane-departure/evaluation/final-evauluation-results/: python-eval-results.txt
data/lane-departure/ex-6-images/: adas-diagram.excalidraw
data/stop-sign/training/: stop_sign_hog_detector.yml
src/: ADASFeature.h  ADASFeatureThreadPool.cpp  ADASFeatureThreadPool.h  AsyncLogger.cpp  AsyncLogger.h  DetectStopSign.cpp  LaneDeparture.cpp  LaneDeparture.h  TrainHOGStopSign.cpp  main.cpp  onnx_yolo11_video_demo_threaded.cpp
src/Object-Detection/: CMakeLists.txt  Makefile  Readme.md  YOLO-Training.cpp  YOLOVideoDetector.cpp  YOLOVideoDetector.h  YOLOv11-ConvertAndTrain.ipynb  onnx_yolo11_video_demo_threaded.cpp  python check_class_balance.ipynb  yolo11_video_demo.cpp
src/Object-Detection/bdd_yolo_6cls/: Readme.md  data.yaml
src/Object-Detection/bdd_yolo_6cls/images/: Readme.md
src/Object-Detection/bdd_yolo_6cls/labels/: readme.md
src/code-for-stop-sign-training-and-detection/: CMakeLists.txt  DetectStopSign.cpp  DetectStopSign.h  DetectStopSign_Functional_07_11_2026.cpp  Question6DetectStopSign_07_05_2026.cpp
src/code-for-stop-sign-training-and-detection/training/: TrainHOGStopSign  TrainHOGStopSign.cpp
src/lane-departure/: ADASFeature.h  LaneDeparture.cpp  LaneDeparture.h  LaneState.h  LaneStateLogger.cpp  LaneStateLogger.h
